fixed table alignment

--- a/public/assets/css/TemplateBuilder.css
+++ b/public/assets/css/TemplateBuilder.css
@@ -450,7 +450,6 @@ select {
 /*         TABLE BLOCK           */
 /* ============================== */
 .table-block {
-  border: 1px solid #555;
   background: #fff;
 }
 
